# aoc-2021

./: .gitignore  pyproject.toml
day1/: main.py
day10/: main.py
day11/: main.py
day12/: main.py
day13/: main.py
day14/: main.py
day15/: main.py
day16/: main.py
day17/: main.py
day2/: main.py
day3/: main.py
day4/: main.py
day5/: main.py
day6/: main.py
day7/: main.py
day8/: main.py
day9/: main.py
