[tool.poetry]
name = "advent of code 2021"
version = "0.1.0"
description = ""
authors = ["PooMaster <peter.d.curtis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
